Add cocoon for make dynamic forms
More specific the form for inform user's languages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import 'abstract/colors';
 @import 'abstract/positions';
 @import 'abstract/visibility';
+@import 'abstract/shape';
 
 // VIEWS
 // main
@@ -19,6 +20,7 @@
 
 // shared
 @import "views/shared/room_card";
+@import "views/shared/language_fields";
 
 // rooms
 @import "views/rooms/index";
