--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -13,7 +13,7 @@
   <div class="form-group">
     <%= form.label Room.human_attribute_name(:language) %>
     <br>
-    <%= form.select(:known_languages_id, @languages, {}, { class: 'custom-select' }) %>
+    <%= form.select(:language_id, @languages, {}, { class: 'custom-select' }) %>
   </div>
 
   <div class="form-group">
