Add remaining fields on user's form
Rename user's field `bith_date` to `born_on`

--- a/app/views/shared/_language_fields.html.erb
+++ b/app/views/shared/_language_fields.html.erb
@@ -1,11 +1,11 @@
 <div class="col-lg-3">
-  <%= f.label :speak %><br />
+  <%= f.label Language.human_attribute_name(:speak) %><br />
   <%= f.select(:speak, [], {}, { :class => 'custom-select' }) do %>
     <%= options_for_select(select_levels('number'), f.object.speak) %>
   <% end %>
 </div>
 <div class="col-lg-3">
-  <%= f.label :write %><br />
+  <%= f.label Language.human_attribute_name(:write) %><br />
   <%= f.select(:write, [], {}, { :class => 'custom-select' }) do %>
     <%= options_for_select(select_levels('number'), f.object.write) %>
   <% end %>
