--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,44 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :country %><br />
+    <%= f.label User.human_attribute_name(:first_name) %><br />
+    <%= f.text_field :first_name, autofocus: true, class: 'form-control input-lg', placeholder: "First Name" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label User.human_attribute_name(:last_name) %><br />
+    <%= f.text_field :last_name, autofocus: true, class: 'form-control input-lg', placeholder: "Last Name" %>
+  </div>
+
+  <!-- <div class="form-group">
+    avatar
+  </div> -->
+
+  <div class="form-group">
+    <%= f.label User.human_attribute_name(:gender) %><br />
+    <%= radio_button("user", "gender", 0, class: 'radio-inline', checked: f.object.gender == "M") %> F
+    <%= radio_button("user", "gender", 1, class: 'radio-inline', checked: f.object.gender == "F") %> M
+  </div>
+
+  <div class="form-group">
+    <%= f.label User.human_attribute_name(:born_on) %><br />
+    <%= date_select "user", "born_on", {
+          order: [:day, :month, :year], start_year: Date.current.year, end_year: Date.current.year - 100
+        }, { class: 'custom-select' } %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :bio %><br />
+    <%= f.text_area :bio, class: 'form-control input-lg', placeholder: "Bio" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label User.human_attribute_name(:phone) %><br />
+    <%= f.text_field :phone, class: 'form-control input-lg', placeholder: "Phone" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label User.human_attribute_name(:country) %><br />
     <%= f.text_field :country, autofocus: true, class: 'form-control input-lg', placeholder: "Country" %>
   </div>
   <hr>
@@ -59,7 +96,7 @@
 
   <hr>
   <h4> Account </h4>
-
+  <br>
   <!-- FIXME: change password -->
 
   <%= button_to "Cancel my account", registration_path(user), data: { confirm: t('sure?') }, method: :delete, class: 'btn btn-danger' %>
