--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
     <!-- Rooms -->
     <div class="col-lg-9 user-main-section">
       <div class="last-rooms">
-        <h2> <% t '.last_rooms' %> </h2>
+        <h2> <%= t '.recents_rooms' %> </h2>
         <%= link_to 'Criar nova sala', new_room_url %>
       </div>
       <div class="row">
