Improv the home page layout
Add to project the avatar image, this way, don't will be necessary internet access

--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -2,14 +2,15 @@
 $light-black: rgb(38, 38, 38);
 $black: rgb(25, 25, 25);
 $black-shadow: rgba(25, 25, 25, .6);
-$light-grey: rgb(230, 230, 230);
-$mid-grey: rgb(152, 152, 152);
 $dark-grey: rgb(61, 51, 54);
 $silver: rgb(185, 185, 185);
 
+$light-grey: rgb(230, 230, 230);
+$purple: rgba(33, 66, 172, 0.85);
+$mid-grey: rgba(114, 112, 112, 0.38);
 $yellow: rgb(234, 207, 64);
 $dark-yellow: rgba(191, 137, 43, 0.94);
-$blue: rgba(32, 118, 212, 0.95);
+$purple: rgba(32, 118, 212, 0.95);
 
 //Typography
 $font-tiny: 14px;
