--- a/app/assets/stylesheets/views/main/footer.scss
+++ b/app/assets/stylesheets/views/main/footer.scss
@@ -14,7 +14,7 @@ footer {
   	display: block;
   }
   #footer {
-  	background: #EDEFF1;
+  	background: $yellow;
   	height: auto;
   	padding-bottom: 30px;
   	border-bottom: 1px solid #CCCCCC;
