--- a/app/assets/stylesheets/views/main/main.scss
+++ b/app/assets/stylesheets/views/main/main.scss
@@ -1,7 +1,8 @@
 body {
   font-family: 'Ubuntu', sans-serif;
+  background: $purple;
   a {
-    color: $blue;
+    color: $purple;
     &:hover{
       transition: all 0.30s ease-in-out;
       color: $black;
