--- a/app/assets/stylesheets/views/users/show.scss
+++ b/app/assets/stylesheets/views/users/show.scss
@@ -1,5 +1,9 @@
 .container {
   .user-aside-section, .user-main-section {
     min-height: 750px;
+    padding: 18px;
+    box-shadow: -4px 3px 16px 2px $mid-grey;
+    border-radius: 6px;
+    background: $light-grey;
   }
 }
