Minor layout changes

--- a/app/assets/stylesheets/abstract/_colors.scss
+++ b/app/assets/stylesheets/abstract/_colors.scss
@@ -1,7 +1,6 @@
-.dark-yellow {
-  background-color: $dark-yellow;
+.b-light-blue {
+  background-color: $light-blue;
 }
-
-.yellow {
-  background-color: $yellow;
+.red {
+  color: $red;
 }
