--- a/app/assets/stylesheets/abstract/_positions.scss
+++ b/app/assets/stylesheets/abstract/_positions.scss
@@ -1,3 +1,11 @@
+.no-padding {
+  padding: 0px !important;
+}
+
+.no-marging{
+  margin: 0px !important;
+}
+
 .margtop10 {
   margin-top: 10px;
 }
@@ -44,8 +52,4 @@
 
 .margbottom80 {
   margin-bottom: 80px;
-}
-
-.no-padding {
-  padding: 0px !important;
 }
