--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -1,16 +1,10 @@
 // Color
-$light-black: rgb(38, 38, 38);
-$black: rgb(25, 25, 25);
-$black-shadow: rgba(25, 25, 25, .6);
-$dark-grey: rgb(61, 51, 54);
-$silver: rgb(185, 185, 185);
-
 $light-grey: rgb(230, 230, 230);
-$purple: rgba(33, 66, 172, 0.85);
+$light-blue: rgba(98, 157, 222, 0.95);
+$dark-blue: rgba(38, 103, 175, 0.95);
 $mid-grey: rgba(114, 112, 112, 0.38);
-$yellow: rgb(234, 207, 64);
-$dark-yellow: rgba(191, 137, 43, 0.94);
-$purple: rgba(32, 118, 212, 0.95);
+$green: rgba(51, 220, 25, 0.77);
+$red: rgba(222, 57, 57, 0.92);
 
 //Typography
 $font-tiny: 14px;
