--- a/app/views/shared/_room_card.html.erb
+++ b/app/views/shared/_room_card.html.erb
@@ -40,6 +40,6 @@
         </div>
       </div>
     </div>
-    <%= link_to t('join_room'), room.link, target: "_blank", class: 'btn btn-primary' %>
+    <%= link_to t('join_room'), room.link, target: "_blank", class: 'btn b-light-blue' %>
   </div>
 </div>
