--- a/app/assets/stylesheets/views/shared/room_card.scss
+++ b/app/assets/stylesheets/views/shared/room_card.scss
@@ -2,8 +2,16 @@
   .card{
     border-radius: 3%;
     &:hover {
-      border-color: $dark-yellow;
+      border-color: $light-blue;
       transition: all 0.30s ease-in-out;
+    }
+  }
+
+  .btn {
+    color: white;
+    &:hover{
+      transition: all 0.30s ease-in-out;
+      background-color: $dark-blue;
     }
   }
 
@@ -11,7 +19,7 @@
     padding: 15px;
     .card-created-at {
       font-size: 12px;
-      color: $silver;
+      color: $mid-grey;
     }
     h4, h6 {
       margin: 15px 0;
