--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -6,8 +6,8 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#"> <%= t 'rooms'%> </a>
+      <li class="nav-item nav-link-room">
+        <%= link_to t('rooms'), rooms_path, class: 'nav-link' %>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link" href="#">Debates</a>
