--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container index-rooms">
-  <div class="row">
+<div class="index-rooms">
+  <div class="row container-default">
     <div class="last-rooms">
       <h1>Rooms</h1>
       <%= link_to 'Criar nova sala', new_room_url %>
