--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <div class="user-aside-section">
-        <%= link_to(edit_user_registration_path) do %>
-          <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
-          <p class="my-4"><%= current_user.username %></p>
-        <% end %>
-        <% if profile_incomplete? current_user %>
-          Seu perfil está incompleto!
-        <% end %>
-
+      <div class="user-aside-section container-default">
+        <div class="user-aside-header">
+          <%= link_to(edit_user_registration_path) do %>
+            <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
+          <% end %>
+          <p class="no-marging"><%= current_user.username %></p>
+          <p class="no-marging">Salas Criadas: <%= current_user.created_rooms %></p>
+          <% if profile_incomplete? current_user %>
+            <p class="m-2 red"> Seu perfil está incompleto!  </p>
+          <% end %>
+        </div>
         <div class="list-group">
           <a href="#" class="list-group-item">Minhas salas</a>
           <!-- <a href="#" class="list-group-item">Meus debates</a> -->
@@ -20,7 +22,7 @@
     </div>
     <!-- Rooms -->
     <div class="col-lg-9">
-      <div class="user-main-section">
+      <div class="user-main-section container-default">
         <div class="last-rooms">
           <h2> <%= t '.recents_rooms' %> </h2>
           <%= link_to 'Criar nova sala', new_room_url %>
