Create section for show created rooms by specific user

--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -1,5 +1,5 @@
 // Color
-$light-grey: rgb(230, 230, 230);
+$light-grey: rgba(214, 218, 214, 0.71);
 $light-blue: rgba(98, 157, 222, 0.95);
 $dark-blue: rgba(38, 103, 175, 0.95);
 $mid-grey: rgba(114, 112, 112, 0.38);
