--- a/app/assets/stylesheets/views/main/main.scss
+++ b/app/assets/stylesheets/views/main/main.scss
@@ -1,6 +1,6 @@
 body {
   font-family: 'Ubuntu', sans-serif;
-  background: white;
+  background: $light-grey;
   a {
     color: $light-blue;
     &:hover{
