--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,5 @@
-<%= render 'form', user: @user %>
+<h2> <%= t 'application.settings' %> </h2>
+
+<div class="container-default">
+  <%= render 'form', user: @user %>
+</div>
