--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
           <% end %>
         </div>
         <div class="list-group">
-          <a href="#" class="list-group-item">Minhas salas</a>
+          <%= link_to 'Minhas salas', my_rooms_users_url, class: 'list-group-item' %>
           <!-- <a href="#" class="list-group-item">Meus debates</a> -->
           <!-- <a href="#" class="list-group-item">Meus Posts</a> -->
           <!-- <a href="#" class="list-group-item">Estatisticas</a> -->
