--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,3 +1,5 @@
 <h1>Editing Room</h1>
 
-<%= render 'form', room: @room %>
+<div class="container-default">
+  <%= render 'form', room: @room %>
+</div>
