Add on navbar a button for suggestion

--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -4,6 +4,7 @@ $light-blue: rgba(98, 157, 222, 0.95);
 $dark-blue: rgba(38, 103, 175, 0.95);
 $mid-grey: rgba(114, 112, 112, 0.38);
 $green: rgba(51, 220, 25, 0.77);
+$dark-green: rgba(56, 109, 29, 0.94);
 $red: rgba(222, 57, 57, 0.92);
 
 //Typography
