--- a/app/assets/stylesheets/views/main/nav_bar.scss
+++ b/app/assets/stylesheets/views/main/nav_bar.scss
@@ -1,3 +1,12 @@
 .navbar.navbar-light {
   background: $green;
+
+  #suggestion-link {
+    background: $dark-green;
+
+    &:hover {
+      transition: all 0.30s ease-in-out;
+      background: $green;
+    }
+  }
 }
