--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,8 +21,8 @@
               <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
                   <h3> Navegar </h3>
                   <ul>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
-                      <li> <a href="#"> Lorem Ipsum </a> </li>
+                      <li> <a href="#"> Salas </a> </li>
+                      <li> <a href="https://goo.gl/forms/0rvlpwcR8SVcbj3m1" target="_blank">Your suggestions</a></li>
                       <li> <a href="#"> Lorem Ipsum </a> </li>
                       <li> <a href="#"> Lorem Ipsum </a> </li>
                   </ul>
@@ -37,20 +37,20 @@
                   </ul>
               </div>
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
-                  <h3> Lorem Ipsum </h3>
-                  <ul>
+                  <h3> Redes sociais </h3>
+                  <!-- <ul>
                       <li>
                           <div class="input-append newsletter-box text-center">
                               <input type="text" class="full text-center" placeholder="Email ">
                               <button class="btn  bg-gray" type="button"> Lorem ipsum <i class="fa fa-long-arrow-right"> </i> </button>
                           </div>
                       </li>
-                  </ul>
+                  </ul> -->
                   <ul class="social">
                       <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
                       <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-                      <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
-                      <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
+                      <!-- <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
+                      <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li> -->
                       <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
                   </ul>
               </div>
