Minor change on layout
Remove wrap class css 'container' from all pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,10 @@
       <%= render 'layouts/nav_bar' %>
     <% end %>
 
-    <div class="container main-div mt-5 mb-5">
-      <%= render 'layouts/flash_messages' %>
+    <div class="main-div mt-5 mb-5">
+      <div class="container">
+        <%= render 'layouts/flash_messages' %>
+      </div>
       <%= yield %>
     </div>
 
