--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing Room</h1>
 
-<div class="container-default">
+<div class="container container-default">
   <%= render 'form', room: @room %>
 </div>
