--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<h2> <%= t 'application.settings' %> </h2>
+<div class="container container-default">
+  <h2> <%= t 'application.settings' %> </h2>
 
-<div class="container-default">
   <%= render 'form', user: @user %>
 </div>
