--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Room</h1>
+<div class="container container-default">
+  <h1>New Room</h1>
 
-<div class="container-default">
   <%= render 'form', room: @room %>
 </div>
