--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container" id='singup'>
+<div class="container-default" id='singup'>
   <div class="row justify-content-md-center">
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
   			<fieldset>
