--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,6 +2,11 @@
   <%= render partial: "shared/form_messages", locals: {model: user} %>
 
   <div class="form-group">
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar , class: 'form-control input-lg' %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :username %><br />
     <%= f.text_field :username, autofocus: true, class: 'form-control input-lg', placeholder: "Your username" %>
   </div>
@@ -13,17 +18,13 @@
 
   <div class="form-group">
     <%= f.label User.human_attribute_name(:first_name) %><br />
-    <%= f.text_field :first_name, autofocus: true, class: 'form-control input-lg', placeholder: "First Name" %>
+    <%= f.text_field :first_name, class: 'form-control input-lg', placeholder: "First Name" %>
   </div>
 
   <div class="form-group">
     <%= f.label User.human_attribute_name(:last_name) %><br />
-    <%= f.text_field :last_name, autofocus: true, class: 'form-control input-lg', placeholder: "Last Name" %>
+    <%= f.text_field :last_name, class: 'form-control input-lg', placeholder: "Last Name" %>
   </div>
-
-  <!-- <div class="form-group">
-    avatar
-  </div> -->
 
   <div class="form-group">
     <%= f.label User.human_attribute_name(:gender) %><br />
