Fix issue with Google authentication

--- a/app/views/shared/_room_card.html.erb
+++ b/app/views/shared/_room_card.html.erb
@@ -36,7 +36,7 @@
           <% if current_user.avatar.blank? %>
             <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
           <% else %>
-            <%= cl_image_tag(current_user.avatar, class: 'card-img-top') %>
+            <%= cl_image_tag(room.user.avatar, class: 'card-img-top') %>
           <% end %>
         </div>
         <div class="col-md-6 col-lg-6 no-padding">
