--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -36,8 +36,12 @@
               <div class="col-xs-6 col-sm-6 col-md-6">
                   <%= f.submit "Sign up", class: 'btn btn-lg btn-success btn-block' %>
               </div>
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <%= link_to user_google_oauth2_omniauth_authorize_path, class: 'btn btn-lg btn-block' do %>
+                  Or register with <%= image_tag 'google-icon.png', class: 'google-img' %>
+                <% end %>
+              </div>
             </div>
-
           <% end %>
   			</fieldset>
       <%= render "users/shared/links" %>
