Create page for 404/500 errors
Fix some issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "views/main/authentication";
 @import "views/main/nav_bar";
 @import "views/main/footer";
+@import "views/main/errors";
 
 // shared
 @import "views/shared/room_card";
