--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,8 +28,8 @@
 
   <div class="form-group">
     <%= f.label User.human_attribute_name(:gender) %><br />
-    <%= radio_button("user", "gender", 0, class: 'radio-inline', checked: f.object.gender == "M") %> F
-    <%= radio_button("user", "gender", 1, class: 'radio-inline', checked: f.object.gender == "F") %> M
+    <%= radio_button("user", "gender", 0, class: 'radio-inline', checked: f.object.gender == "M") %> M
+    <%= radio_button("user", "gender", 1, class: 'radio-inline', checked: f.object.gender == "F") %> F
   </div>
 
   <div class="form-group">
