--- a/app/views/users/shared/_aside.html.erb
+++ b/app/views/users/shared/_aside.html.erb
@@ -1,6 +1,6 @@
 <div class="user-aside-section container-default">
   <div class="user-aside-header">
-    <%= link_to(edit_user_registration_path) do %>
+    <%= link_to edit_user_path(current_user) do %>
       <% if current_user.avatar.blank? %>
         <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
       <% else %>
