--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
             <h2> <%= t '.recents_rooms' %> </h2>
           </div>
           <div class="col-lg-4">
-            <%= link_to 'Criar nova sala', new_room_url, class: 'float-right' %>
+            <%= link_to t('create_room'), new_room_url, class: 'float-right' %>
           </div>
         </div>
         <div class="row">
