--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -5,7 +5,7 @@
         <h1>Rooms</h1>
       </div>
       <div class="col-lg-4">
-        <%= link_to 'Criar nova sala', new_room_url, class: 'float-right' %>
+        <%= link_to t('create_room'), new_room_url, class: 'float-right' %>
       </div>
     </div>
     <div class="row">
