--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,13 +16,14 @@
                       <li> <a href="#"> A ideia </a> </li>
                       <li> <a href="#"> Equipe </a> </li>
                       <li> <a href="#"> Contato </a> </li>
+                      <li> <a href="#"> Ajude o projeto </a> </li>
                   </ul>
               </div>
               <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
                   <h3> Navegar </h3>
                   <ul>
                       <li> <a href="#"> Salas </a> </li>
-                      <li> <a href="https://goo.gl/forms/0rvlpwcR8SVcbj3m1" target="_blank">Your suggestions</a></li>
+                      <li> <a href="https://goo.gl/forms/0rvlpwcR8SVcbj3m1" target="_blank"><%= t('suggestions') %></a></li>
                       <li> <a href="#"> Lorem Ipsum </a> </li>
                       <li> <a href="#"> Lorem Ipsum </a> </li>
                   </ul>
