--- a/app/assets/stylesheets/views/main/main.scss
+++ b/app/assets/stylesheets/views/main/main.scss
@@ -20,6 +20,11 @@ body {
   }
 }
 
+.turbolinks-progress-bar {
+  height: 5px;
+  background-color: $light-blue;
+}
+
 #rooms {
   .nav-link-room{
     font-weight: bolder;
